--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ footer {
     background-color: #aaeeaa;
 }
 
-#blogEntry {
+.blogEntry {
     margin-top: 10px;
     margin-bottom:10px;
     padding: 8px;
