!= for unescaping in jade

--- a/views/singlePost.jade
+++ b/views/singlePost.jade
@@ -3,6 +3,6 @@ header
 #blog
   .blogEntry(blogid='#{data._id}', bloguser='#{data.user}')
     #title #{data.title}
-    #story #{data.story}
+    #story!= data.story
     #byUser by #{data.user} on #{data.createdDate}
 footer Blog Footer
