fixed client.broadcast bug, replaced with rooms; main.emit

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title Blog Title
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js')
     script(src='js/jwysiwyg/jquery.wysiwyg.js')
+    script(src='js/jwysiwyg/controls/wysiwyg.image.js')
     script(src='js/jquery.jeditable.js')
     script(src='js/jquery.jeditable.jwysiwyg.js')
     link(rel='stylesheet', href='css/style.css', type='text/css')
