--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html
   head
     title Blog Title
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js')
     script(src='/js/jwysiwyg/jquery.wysiwyg.js')
     script(src='/js/jwysiwyg/controls/wysiwyg.image.js')
